# LatticeEngine

./: .gitignore  build.gradle  gradle.properties
lattice/: Cargo.toml  build.rs
lattice/src/: error.rs  interop.rs  lib.rs  pipeline.rs  renderer.rs  vulkan_context.rs
lattice/src/modular/: denoise.rs  mod.rs  path_cache.rs  ray_trace.rs  svo.rs  vmm_guiding.rs  vxgi.rs  world_geometry.rs
lattice/src/shaders/: composite.comp  passthrough.comp  shadow.rchit  shadow.rgen  shadow.rint  shadow.rmiss
src/main/java/org/synergyst/latticeeng/: LatticeEng.java  NativeBridge.java  RenderInterop.java
src/main/java/org/synergyst/latticeeng/client/: LatticeEngClient.java
src/main/java/org/synergyst/latticeeng/mixin/: GameRendererMixin.java
src/main/resources/: fabric.mod.json  latticeeng.mixins.json
