[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

[lib]
name = "lattice"
crate-type = ["cdylib"]

[dependencies]
ash = { version = "0.38", features = ["loaded"] }
jni = "0.21"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
shaderc = "0.8"